about.css
/*MY IMAGE SECTION*/

#header{
  /*z-index: 2;*/
  background-size: cover;
  background-image:url("myimages/about/me-small.jpg");
  height: 710px;
  /*width:1250px;*/
  /*width:100%;*/
  /*position:sticky;*/
}

/*@media (max-width: 767px){
  .realTimeAndNur{
    margin-top: 3%;
  }
}*/

/*#myPicDiv{
  left: 0;
  right: 0;
  margin-top: -10%;
  max-width:100%;
  height:auto;
  position: relative;
}*/

/*.quoteParent{
  width:90%;
}*/
  /*position:relative;*/

  /*#myPic{
  max-width:100%;
  height:auto;
  left: 0;
  right: 0;
  position: absolute;
  }*/

#quote{
  z-index:100;
  position: absolute;
  /*margin-bottom: 10%;*/
  margin-left: 10px;
  height: auto;
  top:265px;
  line-height: 225%;
  width:100%;
}

.topQuote, .bottomQuote{
  display:inline-block;
}

.quoteImg{
  width:40px;
  margin-top: -40%;
  /*position: absolute;*/
}
.quoteText{
  font-size: 40px;
  font-weight: bold;
  color: rgb(74, 74, 74);
}

/*CONTACT SECTION*/
#contact{
background-color: rgb(154,16,112);
padding-bottom: 20px;
padding-top: 15px;
text-align: center;
color: white !important;
/*width:100%;*/
}

#websiteLink, #gitHubLink, #gmail{
  color: rgb(236,233,226) !important;
}

.sectionTitleJ{
  font-size: 40px;
  text-align: center;
}

.sectionTitle{
  font-size: 30px;
  text-align: center;
}
#jobTitle{
  font-size: 26px;
}

#jobLocation{
font-size: 20px;
}

ul{
  list-style-type: none;
}

li{
  display: inline;
}

.anchor{
color: white !important;
}
.deetsImg{
  width: 25px;
}

.gitLinked{
  width: 27px;
}

/*APPROACH*/

.processSectionTitleAbout{
  background:rgb(234,231,231);
  color: rgb(74,74,74);
}
.approachTitleAbout{
  margin-top: 0%;
}

.approach{
  text-align: center;
  margin-bottom: 2%;
}

.approachSections{
  margin:1%;
}

.approachCircle{
  width:120px;
  height:120px;
  border-radius:50%;
  background-color: rgb(154,16,112);
  color:white;
  position:relative;
  vertical-align: top;
  display: inline-block;
  font-size:24px;
  padding-top:43px;
  margin-right: 1%;
}

.approachPointsAbout{
  padding-top: 21px;
}

.approachText{
text-align: left;
width:80%;
display: inline-block;
}

.twoWordCircle{
  padding-top: 25px;
}

.processCircleFix{
  margin-top: 0%;
}

/*SKILLS TABLE*/
.softDiv{
text-align: center;
}

.swTable{
  display:inline-block;
  text-align: left;
  vertical-align: top;
}

.processSectionTitleAbout{
    padding-left:6%;
}

table{
  margin:20px;
}

th{
  font-size: 24px;
}

td{
  height:50px;
}

.grade{
  width:100px;
}

.tableTitleSkil{
color: rgb(154,16,112);
font-weight: normal;
}

/*.zebra{
    background:rgb(234,231,231);
}*/

.method{
  width:170px;
  /*180*/
}

.software{
  width: 30px;
}

